Fixing Dark Mode issue with clock face
Dark Mode was changing the clock text to white making it unreadable, so I have changed the colour from black to blue to hopefully overcome this.

--- a/src/style.css
+++ b/src/style.css
@@ -177,7 +177,7 @@ br {
 
 .clock-face {
   
-  color: black;
+  color: rgb(1, 124, 161);
   display: block;
   margin: 0 auto;
   background-size: contain;
